@@ -1,9 +1,10 @@
 serd (0.30.11) unstable;
 
   * Fix writing long literals with triple quotes
+  * Support combining several BSD-style command line flags in serdi
   * Write statements with invalid URI characters in lax mode
 
- -- David Robillard <d@drobilla.net>  Fri, 09 Apr 2021 19:40:44 +0000
+ -- David Robillard <d@drobilla.net>  Mon, 12 Apr 2021 01:15:27 +0000
 
 serd (0.30.10) stable;
 
